--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 body {
     background-color: #000;
     padding: 0;
+    text-align: center;
     font-family: comic;
     font-size: 1em;
     color: #FFF;
     }
 #canv {
+    height: 60vh;
     margin-top: 2%;
     border: 5px solid white;
     }
     </style>
 <body>
     <h1>Tetris</h1>
+    <div id = "score"></div>
     <canvas id="canv" width="240" height="400"></canvas>
     <script src="tetris.js"></script>
 </body>
